force-app/main/default/objects/constructorstanding__c/constructorstanding__c.object-meta.xml
<CustomObject>
    <label>Constructor standing</label>
    <nameField>
        <label>constructorstanding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constructor standing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>