force-app/main/default/objects/constructorstanding__c/fields/Constructor__c.field-meta.xml
<CustomField>
    <fullName>Constructor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constructor</label>
    <referenceTo>constructor__c</referenceTo>
    <relationshipLabel>Constructor standing</relationshipLabel>
    <relationshipName>Constructor_standing</relationshipName>
    <type>Lookup</type>
</CustomField>