force-app/main/default/objects/constructorstanding__c/fields/constructorId__c.field-meta.xml
<CustomField>
    <fullName>constructorId__c</fullName>
    <externalId>true</externalId>
    <label>constructorId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>