force-app/main/default/objects/constructorstanding__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <label>Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>