force-app/main/default/objects/constructorstanding__c/fields/positionText__c.field-meta.xml
<CustomField>
    <fullName>positionText__c</fullName>
    <label>Position Text</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>