force-app/main/default/objects/constructorstanding__c/fields/round__c.field-meta.xml
<CustomField>
    <fullName>round__c</fullName>
    <label>round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>