force-app/main/default/objects/constructorstanding__c/fields/season__c.field-meta.xml
<CustomField>
    <fullName>season__c</fullName>
    <label>season</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>