force-app/main/default/objects/constructorstanding__c/fields/wins__c.field-meta.xml
<CustomField>
    <fullName>wins__c</fullName>
    <label>Wins</label>
    <length>5</length>
    <type>Text</type>
</CustomField>